@@ -1,6 +1,6 @@
 package io.mercury.serialization.avro;
 
-import io.mercury.common.log.Log4j2LoggerFactory;
+import io.mercury.common.log4j2.Log4j2LoggerFactory;
 import io.mercury.common.serialization.specific.ByteBufferSerializer;
 import org.apache.avro.specific.SpecificRecord;
 import org.jctools.maps.NonBlockingHashMapLong;
@@ -50,7 +50,7 @@ public final class AvroBinarySerializerBuf<T extends SpecificRecord> implements 
     }
 
     private AvroBinarySerializer<T> getSerializer() {
-        long threadId = Thread.currentThread().getId();
+        long threadId = Thread.currentThread().threadId();
         return serializers.putIfAbsent(threadId, new AvroBinarySerializer<>(type, bufSize));
     }
 
